--- a/notebooks/Explorative Data Analysis - Global Commodity Trade Statistics.ipynb
+++ b/notebooks/Explorative Data Analysis - Global Commodity Trade Statistics.ipynb
@@ -51,17 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -142,11 +134,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/commodity_trade_statistics_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['country_or_area',\n",
+       " 'year',\n",
+       " 'comm_code',\n",
+       " 'commodity',\n",
+       " 'flow',\n",
+       " 'trade_usd',\n",
+       " 'weight_kg',\n",
+       " 'quantity_name',\n",
+       " 'quantity',\n",
+       " 'category']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8225871"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
@@ -1987,7 +2028,7 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize=(18,15))\n",
+    "fig, ax = plt.subplots(figsize=(15,12))\n",
     "animals_imports.groupby(['year', 'commodity']).agg('sum')['trade_usd'].unstack().plot(ax=ax)"
    ]
   },
@@ -2055,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -3151,13 +3192,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# export dataframe to .csv\n",
     "df.to_csv('export_2018_pricelist.csv', index=False)"
@@ -3171,30 +3205,6 @@
     "- https://medium.com/swlh/eda-exploratory-data-analysis-e0f453d97894\n",
     "- https://towardsdatascience.com/speed-up-your-exploratory-data-analysis-with-pandas-profiling-88b33dc53625\n",
     "- https://towardsdatascience.com/the-ultimate-guide-to-data-cleaning-3969843991d4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-168-9041de3e66cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# test PostgreSQL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdsn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
-     ]
-    }
-   ],
-   "source": [
-    "# test PostgreSQL\n",
-    "import psycopg2\n",
-    "\n",
-    "conn = psycopg2.connect(dsn)"
    ]
   },
   {
