doc: document exploratory data analysis, update READEME.md accordingly

--- a/notebooks/Data Exploration - Earth Surface Temperature Data.ipynb
+++ b/notebooks/Data Exploration - Earth Surface Temperature Data.ipynb
@@ -6,8 +6,26 @@
    "source": [
     "# Data Exploration - Earth Surface Temperature Data\n",
     "\n",
-    "**This notebook contains an exploratory analysis of the Earth Surface Temperature Data.\n",
-    "This analysis constitutes the steps undertaken in order to stage the temperature data into the temperature_staging database table.**"
+    "* **This notebook contains an exploratory analysis of the Earth Surface Temperature Data.**\n",
+    "\n",
+    "## Goad and summary\n",
+    "* **Inspect data** (column names and counts, row examples and counts, data types: ranges or examples, missing values), add some vizualisations (last section), you can read about the results in [research/Temperatures.md](research/Temperatures.md).\n",
+    "* **Determine necessary steps to perform the staging** of temperature data into temperature_staging database table. *\n",
+    "* **Identified steps are:**\n",
+    "  * 1 Identify columns / rows for impoert, these are all: 'dt', 'AverageTemperature', 'AverageCertainty', 'Country'\n",
+    "  * 2 Drop rows with nans for colunns: 'dt', 'AverageTemperature', 'Country'\n",
+    "  * 3 Remove colony country labels\n",
+    "  * 4 Add year column\n",
+    "  * 5 Aggregate all measurements for a year and country into one row featuring overall average temperature and certainty for a year and a country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prerequisits:\n",
+    "- Download (see source below) and extract data in data-Folder\n",
+    "- Install and add required package to load data (install pipenv, enter pipenv install)"
    ]
   },
   {
@@ -18,6 +36,13 @@
     "https://www.kaggle.com/berkeleyearth/climate-change-earth-surface-temperature-data/\n",
     "\n",
     "Data from 1743 - 2013"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -89,10 +114,7 @@
     "import seaborn as sns\n",
     "\n",
     "#custom\n",
-    "from util.eda import *\n",
-    "\n",
-    "# change display of floats in dataframes\n",
-    "# pd.set_option('display.floa/Users/lukas/Downloads/titanic/train.csvt_format', lambda x: \"{0:,.0f}\".format(x))"
+    "from util.eda import *"
    ]
   },
   {
@@ -109,6 +131,25 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/GlobalLandTemperaturesByCountry.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset count: 577462\n",
+      "dataset no dup count: 577462\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dropping duplicates\n",
+    "df = dropping_duplicates(df)"
    ]
   },
   {
@@ -235,9 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
