--- a/notebooks/Explorative Data Analysis Template.ipynb
+++ b/notebooks/Explorative Data Analysis Template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explorative Data Analysis - Template - Eval for Data in DB import"
+    "# Data Exploration - Template"
    ]
   },
   {
@@ -197,7 +197,6 @@
     "- .dropna() — drop NaN values\n",
     "- .fillna() — impute NaN values\n",
     "- or: impute\n",
-    "====\n",
     "Dublicates\n",
     "- .drop_duplicates()— drop duplicate values\n",
     "Formatting:\n",
@@ -244,13 +243,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# export dataframe to .csv\n",
     "df.to_csv('export_2018_pricelist.csv', index=False)"
@@ -265,13 +257,6 @@
     "- https://towardsdatascience.com/speed-up-your-exploratory-data-analysis-with-pandas-profiling-88b33dc53625\n",
     "- https://towardsdatascience.com/the-ultimate-guide-to-data-cleaning-3969843991d4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
