--- a/notebooks/ETL - Global Temperatures.ipynb
+++ b/notebooks/ETL - Global Temperatures.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -97,112 +97,39 @@
     "\n",
     "    # aggregate (mean) temp and uncertainty by year and country\n",
     "\n",
-    "    surface_temp_by_year_and_country = df_no_dup_with_year \\\n",
+    "    df = df_no_dup_with_year \\\n",
     "                                            .groupby(['year', 'Country'],as_index=False) \\\n",
     "                                            .agg({ 'AverageTemperature': 'mean', \\\n",
     "                                                   'AverageTemperatureUncertainty': 'mean' \\\n",
-    "                                             })\n",
-    "    \n",
-    "    \n",
+    "                                                 })\n",
     "\n",
-    "    surface_temp_by_year_and_country = surface_temp_by_year_and_country.rename(\n",
+    "    df = df.rename(\n",
     "        columns={\"Country\": \"country_or_area\", \"AverageTemperature\": \"temperature\",\n",
     "                 \"AverageTemperatureUncertainty\": \"uncertainty\"})\n",
     "\n",
-    "    surface_temp_by_year_and_country.sample(5)\n",
-    "    #surface_temp_by_year_and_country.to_sql(table, engine, index=False, if_exists=\"replace\")\n",
+    "    df['rank'] = np.nan\n",
+    "\n",
+    "    # add temperature rank for every year by temperature: 1: hottest -> coldest.\n",
+    "\n",
+    "    years = df['year'].unique()\n",
+    "\n",
+    "    for year in years:\n",
+    "        year_data = df[df['year'] == year]\n",
+    "        sorted_year_data = year_data.sort_values('temperature')\n",
+    "        sorted_year_data['rank'] = sorted_year_data['temperature'].rank(ascending=False)\n",
+    "\n",
+    "        for i in sorted_year_data.index:\n",
+    "            rank = sorted_year_data.at[i, 'rank']\n",
+    "            df.at[i, 'rank'] = rank\n",
     "    \n",
-    "    return surface_temp_by_year_and_country\n",
+    "    return df\n",
     "\n",
     "df = stage_global_temperatures()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# year_data = df[df['year'] == 1990]\n",
-    "# sorted_year_data = year_data.sort_values('temperature')\n",
-    "# sorted_year_data['rank'] = sorted_year_data['temperature'].rank(ascending=False)\n",
-    "\n",
-    "\n",
-    "# for i in sorted_year_data.index:\n",
-    "#     rank = sorted_year_data.at[i, 'rank']\n",
-    "#     print(rank)\n",
-    "#     df.at[i, 'rank'] = rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1743, 1744, 1745, 1750, 1751, 1752, 1753, 1754, 1755, 1756, 1757,\n",
-       "       1758, 1759, 1760, 1761, 1762, 1763, 1764, 1765, 1766, 1767, 1768,\n",
-       "       1769, 1770, 1771, 1772, 1773, 1774, 1775, 1776, 1777, 1778, 1779,\n",
-       "       1780, 1781, 1782, 1783, 1784, 1785, 1786, 1787, 1788, 1789, 1790,\n",
-       "       1791, 1792, 1793, 1794, 1795, 1796, 1797, 1798, 1799, 1800, 1801,\n",
-       "       1802, 1803, 1804, 1805, 1806, 1807, 1808, 1809, 1810, 1811, 1812,\n",
-       "       1813, 1814, 1815, 1816, 1817, 1818, 1819, 1820, 1821, 1822, 1823,\n",
-       "       1824, 1825, 1826, 1827, 1828, 1829, 1830, 1831, 1832, 1833, 1834,\n",
-       "       1835, 1836, 1837, 1838, 1839, 1840, 1841, 1842, 1843, 1844, 1845,\n",
-       "       1846, 1847, 1848, 1849, 1850, 1851, 1852, 1853, 1854, 1855, 1856,\n",
-       "       1857, 1858, 1859, 1860, 1861, 1862, 1863, 1864, 1865, 1866, 1867,\n",
-       "       1868, 1869, 1870, 1871, 1872, 1873, 1874, 1875, 1876, 1877, 1878,\n",
-       "       1879, 1880, 1881, 1882, 1883, 1884, 1885, 1886, 1887, 1888, 1889,\n",
-       "       1890, 1891, 1892, 1893, 1894, 1895, 1896, 1897, 1898, 1899, 1900,\n",
-       "       1901, 1902, 1903, 1904, 1905, 1906, 1907, 1908, 1909, 1910, 1911,\n",
-       "       1912, 1913, 1914, 1915, 1916, 1917, 1918, 1919, 1920, 1921, 1922,\n",
-       "       1923, 1924, 1925, 1926, 1927, 1928, 1929, 1930, 1931, 1932, 1933,\n",
-       "       1934, 1935, 1936, 1937, 1938, 1939, 1940, 1941, 1942, 1943, 1944,\n",
-       "       1945, 1946, 1947, 1948, 1949, 1950, 1951, 1952, 1953, 1954, 1955,\n",
-       "       1956, 1957, 1958, 1959, 1960, 1961, 1962, 1963, 1964, 1965, 1966,\n",
-       "       1967, 1968, 1969, 1970, 1971, 1972, 1973, 1974, 1975, 1976, 1977,\n",
-       "       1978, 1979, 1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988,\n",
-       "       1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999,\n",
-       "       2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,\n",
-       "       2011, 2012, 2013])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['year'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['rank'] = np.nan\n",
-    "\n",
-    "for year in years:\n",
-    "    year_data = df[df['year'] == year]\n",
-    "    sorted_year_data = year_data.sort_values('temperature')\n",
-    "    sorted_year_data['rank'] = sorted_year_data['temperature'].rank(ascending=False)\n",
-    "    \n",
-    "    for i in sorted_year_data.index:\n",
-    "        rank = sorted_year_data.at[i, 'rank']\n",
-    "        df.at[i, 'rank'] = rank\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +271,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
